--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
+<!DOCTYPE html>
 <html>
- 
 <body>
-  <h1>VU LE</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
- 
 </html>
